paper-snowflake-platform-selector: Fix css bug where platform selector would shift randomly

--- a/theme_components/style/paper-snowflake-platform-selector.css
+++ b/theme_components/style/paper-snowflake-platform-selector.css
@@ -1,5 +1,5 @@
 .sidebar {
-  position: relative;
+  position: absolute;
   right: 0;
   left: 0;
   bottom:0;
